# Shinsoku

./: .gitignore  AGENT.md  CMakeLists.txt  README.md  RELEASE.md  Roadmap.md  TODO.txt  vcpkg.json
.github/workflows/: release.yml
docs/: feature-roadmap.md  platform-capability-matrix.md  platform-rollout-plan.md  profiles-design.md  selection-followups.md  settings-redesign.md  system-audio-design.md  wayland-followup-notes.md
mobile/: README.md
mobile/android/: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
mobile/android/app/: build.gradle.kts
mobile/android/app/src/main/: AndroidManifest.xml
mobile/android/app/src/main/cpp/: CMakeLists.txt  native_bridge.cpp  native_transcript_cleanup.cpp
mobile/android/app/src/main/java/com/shinsoku/mobile/: MainActivity.kt
mobile/android/app/src/main/res/drawable/: bg_ime_button_chip.xml  bg_ime_button_chip_active.xml  bg_ime_button_outline.xml  bg_ime_button_primary.xml  bg_ime_button_primary_pill.xml  bg_ime_button_tonal.xml  bg_ime_section_soft.xml  bg_ime_surface.xml  ic_ime_backspace.xml  ic_ime_enter.xml  ic_launcher_foreground.xml  ic_shinsoku_mark.xml
mobile/android/app/src/main/res/layout/: activity_draft_editor.xml  activity_history.xml  activity_main.xml  activity_settings.xml  input_view.xml
mobile/android/app/src/main/res/values/: colors.xml  ic_launcher_background.xml  strings.xml  themes.xml
mobile/android/app/src/main/res/values-night/: colors.xml
mobile/android/app/src/main/res/xml/: method.xml
mobile/android/speechcore/: build.gradle.kts
mobile/ios/: .gitignore  README.md  project.yml
mobile/ios/App/: Info.plist  ShinsokuMobile.entitlements
mobile/ios/App/Sources/: DraftEditorView.swift  DraftsView.swift  HomeView.swift  IOSVoiceWorkspace.swift  RootView.swift  SettingsView.swift  SetupGuideView.swift  ShinsokuMobileApp.swift  SpeechTranscriber.swift
mobile/ios/Keyboard/: Info.plist  ShinsokuKeyboard.entitlements
mobile/ios/Keyboard/Sources/: ShinsokuKeyboardViewController.swift
mobile/ios/Shared/Sources/: DisplayFormatting.swift  DraftEntry.swift  NativeProfileBridge.h  NativeProfileBridge.mm  NativeRuntimeMetadata.swift  NativeTransformPromptBuilder.swift  NativeTransformSummary.swift  NativeVoiceProfiles.swift  SharedStorage.swift  ShinsokuBridgingHeader.h  VoiceProfile.swift  VoiceProviderConfig.swift
mobile/ios/Tools/: generate_app_icons.sh
mobile/nativecore/include/shinsoku/nativecore/: c_api.h  profile_presets.hpp  provider_diagnostics.hpp  provider_metadata.hpp  runtime_derivation.hpp  transcript_cleanup.hpp  transcript_commit_planner.hpp  transform_prompt.hpp
mobile/nativecore/src/: c_api.cpp  profile_presets.cpp  provider_diagnostics.cpp  provider_metadata.cpp  runtime_derivation.cpp  transcript_cleanup.cpp  transcript_commit_planner.cpp  transform_prompt.cpp
packaging/linux/: package-appimage.sh  shinsoku.desktop.in
packaging/macos/: Info.plist.in  package-dmg.sh
packaging/windows/: package-portable.ps1
resources/: app_theme.qrc
resources/icons/: check-dark.xpm  check-light.xpm  chevron-down-dark.xpm  chevron-down-light.xpm  chevron-up-dark.xpm  chevron-up-light.xpm
resources/themes/: app.qss  hud.qss
src/: main.cpp
src/core/: app_config.cpp  app_config.hpp  app_controller.cpp  app_controller.hpp  app_state.hpp  asr_client.cpp  asr_client.hpp  audio_recorder.cpp  audio_recorder.hpp  curl_support.cpp  curl_support.hpp  history_store.cpp  history_store.hpp  recording_store.cpp  recording_store.hpp  runtime_profile.cpp  runtime_profile.hpp  task_types.hpp  text_refiner.cpp  text_refiner.hpp  wav_encoder.cpp  wav_encoder.hpp
src/core/backend/: asr_backend.hpp  backend_factory.cpp  backend_factory.hpp  streaming_asr_backend.hpp  text_transform_backend.hpp
src/core/backend/streaming/: ix_proxy_socket.cpp  ix_proxy_socket.hpp  websocket_transport_options.cpp  websocket_transport_options.hpp
src/core/backend/streaming/bailian/: bailian_streaming_asr_backend.cpp  bailian_streaming_asr_backend.hpp
src/core/backend/streaming/soniox/: soniox_streaming_asr_backend.cpp  soniox_streaming_asr_backend.hpp
src/platform/: audio_capture_service.hpp  clipboard_service.hpp  global_hotkey.hpp  hotkey_names.cpp  hotkey_names.hpp  hud_presenter.hpp  miniaudio_audio_capture_service.cpp  miniaudio_audio_capture_service.hpp  selection_service.hpp
src/platform/linux/: linux_pulseaudio_audio_capture_service.cpp  linux_pulseaudio_audio_capture_service.hpp
src/platform/macos/: macos_audio_capture_service.hpp  macos_audio_capture_service.mm  macos_clipboard_service.hpp  macos_clipboard_service.mm  macos_global_hotkey.hpp  macos_global_hotkey.mm  macos_hud_presenter.hpp  macos_hud_presenter.mm  macos_input_utils.hpp  macos_input_utils.mm  macos_selection_service.hpp  macos_selection_service.mm
src/platform/qt/: qt_clipboard_service.cpp  qt_clipboard_service.hpp  qt_global_hotkey.cpp  qt_global_hotkey.hpp  qt_hud_presenter.cpp  qt_hud_presenter.hpp  qt_selection_service.cpp  qt_selection_service.hpp
src/platform/wayland/: qwayland_layer_shell_integration.cpp  qwayland_layer_shell_integration.hpp  qwayland_layer_surface.cpp  qwayland_layer_surface.hpp  wayland_clipboard_service.cpp  wayland_clipboard_service.hpp  wayland_global_hotkey.cpp  wayland_global_hotkey.hpp  wayland_layer_shell_hud_presenter.cpp  wayland_layer_shell_hud_presenter.hpp  wayland_selection_service.cpp  wayland_selection_service.hpp  wlr-layer-shell-unstable-v1.xml
src/platform/windows/: windows_clipboard_service.cpp  windows_clipboard_service.hpp  windows_global_hotkey.cpp  windows_global_hotkey.hpp  windows_selection_service.cpp  windows_selection_service.hpp
src/ui/: app_theme.cpp  app_theme.hpp  history_details_dialog.cpp  history_details_dialog.hpp  history_window.cpp  history_window.hpp  main_window.cpp  main_window.hpp  meeting_transcription_window.cpp  meeting_transcription_window.hpp  settings_window.cpp  settings_window.hpp
tools/: linux_pulse_monitor_probe.cpp
website/: README.md  index.html  styles.css
(+57 files in other folders)
